--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -734,11 +734,7 @@
       "metadata": {
         "id": "_eQuLe2Jdy3M",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "1fb3364b-2ffe-415e-9b20-798372fe3c29"
+        "colab": {}
       },
       "source": [
         "# Guesses all burritos are not-great:\n",
@@ -746,323 +742,41 @@
         "y_pred = [majority_class]*len(y_train)\n",
         "y_pred"
       ],
-      "execution_count": 102,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1K0AAQnMed6I",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "267f0d12-43fe-4b60-9a60-d853a53ef40f"
+      },
+      "source": [
+        "# now lets get an accuracy score for the baseline:\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(\n",
+        "    f\"The accuracy of the baseline model: {int(round(accuracy_score(y_train,y_pred),2)*100)}%\")"
+      ],
+      "execution_count": 116,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False,\n",
-              " False]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 102
+          "output_type": "stream",
+          "text": [
+            "The accuracy of the baseline model: 59%\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1K0AAQnMed6I",
+        "id": "Wy1AeCDce7qW",
         "colab_type": "code",
         "colab": {}
       },
