--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -781,6 +781,88 @@
         "colab": {}
       },
       "source": [
+        "import category_encoders as ce \n",
+        "encoder = ce.OneHotEncoder(use_cat_names=True)"
+      ],
+      "execution_count": 117,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z4imQTxPgIS9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.impute import SimpleImputer\n",
+        "imputer = SimpleImputer(strategy='mean') #try dif perams"
+      ],
+      "execution_count": 118,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XtFa1MGTgIZj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "scaler = StandardScaler()"
+      ],
+      "execution_count": 119,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jZj34Im6gInX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.liner_model import LogisticRegression\n",
+        "model = LogisticRegression()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gX_L3SJkgIlQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k0eHpL41gIWj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tE6ObGjEgIAs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
