--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -67,9 +67,9 @@
         "\n",
         "- [ ] Add your own stretch goal(s) !\n",
         "- [ ] Make exploratory visualizations.\n",
-        "- [ ] Do one-hot encoding.\n",
-        "- [ ] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
-        "- [ ] Get and plot your coefficients.\n",
+        "- [x] Do one-hot encoding.\n",
+        "- [x] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
+        "- [x] Get and plot your coefficients.\n",
         "- [ ] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html)."
       ]
     },
