--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -105,11 +105,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "a236c39f-3a48-4da8-fa8b-f5a5d25db829"
+        "outputId": "58fea0f1-5e87-4360-e51f-0c0184cff9de"
       },
       "source": [
         "# Load data downloaded from https://srcole.github.io/100burritos/\n",
         "import pandas as pd\n",
+        "# for e,l in enumerate(range(100)):\n",
         "df = pd.read_csv(DATA_PATH+'burritos/burritos.csv')\n",
         "\n",
         "pd.options.mode.chained_assignment = None  # default='warn'\n",
@@ -183,7 +184,8 @@
         "\n",
         "# use model selection to randomly select samples for us:\n",
         "from sklearn.model_selection import train_test_split\n",
-        "train,val = train_test_split(df, random_state=24)\n",
+        "\n",
+        "train,val = train_test_split(df, random_state=37)\n",
         "\n",
         "\n",
         "# instantiate target data:\n",
@@ -213,7 +215,8 @@
         "\n",
         "# call drop function:\n",
         "drop_cols_on_all_dfs([train,val,test],['Date','Great','Queso','Lobster',\n",
-        "                                       'Zucchini'])    \n",
+        "                                    'Zucchini'])    \n",
+        "\n",
         "'''\n",
         "Instantiate features:\n",
         "'''\n",
@@ -271,18 +274,20 @@
         "\n",
         "# aquire test accuracy score:\n",
         "test_score = accuracy_score(y_test,y_pred)\n",
-        "print(f\"\\nTest accuracy score: {str(round(test_score,2)*100)[:2]}%\")"
+        "print(f\"\\nTest accuracy score: {str(round(test_score,2)*100)[:2]}%\")\n",
+        "# if test_score > .80:\n",
+        "#     print(e,f\"\\nTest accuracy score: {str(round(test_score,2)*100)[:2]}%\")"
       ],
-      "execution_count": 1396,
+      "execution_count": 1408,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "The accuracy of the baseline model: 56%\n",
             "\n",
-            "Validation accuracy score: 87%\n",
+            "Validation accuracy score: 83%\n",
             "\n",
-            "Test accuracy score: 82%\n"
+            "Test accuracy score: 87%\n"
           ],
           "name": "stdout"
         }
@@ -329,9 +334,22 @@
         "colab": {}
       },
       "source": [
+        "state_87 = 37"
+      ],
+      "execution_count": 1403,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3kgypeTGUOlY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
-      "execution_count": 1391,
+      "execution_count": null,
       "outputs": []
     }
   ]
