--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -93,7 +93,7 @@
         "else:\n",
         "    DATA_PATH = '../data/'"
       ],
-      "execution_count": 251,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
         "import pandas as pd\n",
         "df = pd.read_csv(DATA_PATH+'burritos/burritos.csv')"
       ],
-      "execution_count": 252,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
         "df = df.dropna(subset=['overall'])\n",
         "df['Great'] = df['overall'] >= 4"
       ],
-      "execution_count": 253,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
         "df.loc[carnitas, 'Burrito'] = 'Carnitas'\n",
         "df.loc[~california & ~asada & ~surf & ~carnitas, 'Burrito'] = 'Other'"
       ],
-      "execution_count": 254,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
         "# Drop some high cardinality categoricals\n",
         "df = df.drop(columns=['Notes', 'Location', 'Reviewer', 'Address', 'URL', 'Neighborhood'])"
       ],
-      "execution_count": 255,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
         "# Drop some columns to prevent \"leakage\"\n",
         "df = df.drop(columns=['Rec', 'overall'])"
       ],
-      "execution_count": 256,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.linear_model import LogisticRegressionCV"
       ],
-      "execution_count": 257,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,7 +221,7 @@
         "# look at data\n",
         "df.describe(exclude='number')"
       ],
-      "execution_count": 258,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 259,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -916,47 +916,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f8sp-4bkhELu",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 218
-        },
-        "outputId": "0e4aec34-6470-4eb4-ccca-d532d9194648"
-      },
-      "source": [
-        "df.Volume.value_counts()"
-      ],
-      "execution_count": 260,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.77    19\n",
-              "0.65    17\n",
-              "0.75    13\n",
-              "0.68    13\n",
-              "0.85    13\n",
-              "        ..\n",
-              "0.55     1\n",
-              "1.02     1\n",
-              "0.41     1\n",
-              "1.08     1\n",
-              "1.03     1\n",
-              "Name: Volume, Length: 64, dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 260
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ekrgCWgMBgNT",
         "colab_type": "code",
         "colab": {}
@@ -968,40 +927,8 @@
         "                 'Yes':1,\n",
         "                 'No':0})"
       ],
-      "execution_count": 261,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HRES4pAEgfkv",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 67
-        },
-        "outputId": "93b97062-ec4e-4080-9a73-1c571f8e5e24"
-      },
-      "source": [
-        "df['Chips'].value_counts()"
-      ],
-      "execution_count": 262,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.0    25\n",
-              "0.0     1\n",
-              "Name: Chips, dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 262
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1014,7 +941,7 @@
         "# feature engeneering to gain total number of fillings.\n",
         "df['num_fillings'] = df.iloc[:,22:58].apply(pd.to_numeric,errors='coerce').sum(axis=1)"
       ],
-      "execution_count": 263,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1028,7 +955,7 @@
         "# creat date time format for train/val/test split\n",
         "df['Date'] = pd.to_datetime(df['Date'])"
       ],
-      "execution_count": 264,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1042,7 +969,7 @@
         "# year column for train/val/test seperation\n",
         "df['Year'] = df['Date'].map(lambda x: x.year)"
       ],
-      "execution_count": 265,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1058,7 +985,7 @@
         "val = df[df['Year'] == 2017]\n",
         "test = df[df['Year'] > 2017]"
       ],
-      "execution_count": 266,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1076,7 +1003,7 @@
         "# check size\n",
         "train.shape, val.shape, test.shape"
       ],
-      "execution_count": 267,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1041,7 @@
         "y_val = val[target]\n",
         "y_test = test[target]"
       ],
-      "execution_count": 268,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1136,7 +1063,7 @@
         "# if we said every burrito is NOT great then we would be right 59% of the time \n",
         "# on the training set."
       ],
-      "execution_count": 269,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1191,7 +1118,7 @@
         "# check accuracy\n",
         "accuracy_score(y_val, y_pred)"
       ],
-      "execution_count": 270,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,7 +1149,7 @@
         "coefficients = pd.Series(model.coef_[0], X_train_encoded.columns)\n",
         "coefficients"
       ],
-      "execution_count": 271,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1263,7 +1190,7 @@
       "source": [
         "coefficients.sort_values().plot.barh();"
       ],
-      "execution_count": 272,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1292,7 +1219,7 @@
         "outputId": "cd703651-61d6-4c68-eb8b-cefb5d4173a6"
       },
       "source": [
-        "# fit test data and get accuracy score\n",
+        "# predict test data and get accuracy score\n",
         "X_test_encoded = encoder.transform(X_test)\n",
         "X_test_imputed = imputer.transform(X_test_encoded)\n",
         "X_test_scaled = scaler.transform(X_test_imputed)\n",
@@ -1300,7 +1227,7 @@
         "accuracy_score(y_pred,y_test)\n",
         "# beat baseline "
       ],
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1326,7 +1253,7 @@
       "source": [
         ""
       ],
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1339,7 +1266,7 @@
       "source": [
         ""
       ],
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1352,7 +1279,7 @@
       "source": [
         ""
       ],
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1365,7 +1292,7 @@
       "source": [
         ""
       ],
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1378,7 +1305,7 @@
       "source": [
         ""
       ],
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1391,7 +1318,7 @@
       "source": [
         ""
       ],
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     }
   ]
