--- a/module1-regression-1/ERLE_GRANGERII__DS18_LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/ERLE_GRANGERII__DS18_LS_DS_211_assignment.ipynb
@@ -1930,9 +1930,9 @@
       },
       "source": [
         "# our function would need:\n",
-        "#  X_matrix and y_target\n",
+        "#  X_matrix and y_target, and the dependent variable or correlate\n",
         "\n",
-        "def linear_regress_predict(X_matrix, y_target):\n",
+        "def linear_regress_predict(X_matrix, y_target, correlate):\n",
         "\n",
         "  # X_matrix and y_target\n",
         "  #   from that it can create train-Test split\n",
@@ -1946,8 +1946,10 @@
         "  lr.fit(X_train, y_train)\n",
         "\n",
         "  # Then it can make predictions and store them as named tuples:\n",
-        "  # training_MAE, testing_MAE,\n",
+        "  # training_MAE, testing_MAE, response_variable\n",
         "  # now make the predictions\n",
+        "\n",
+        "  response_variable = lr.predict([correlate])\n",
         "\n",
         "  training_MAE = mean_absolute_error(y_train, lr.predict(X_train))\n",
         "  testing_MAE = mean_absolute_error(y_test, lr.predict(X_test))\n",
@@ -1955,14 +1957,14 @@
         "  # it can also return the coeffient and intercept\n",
         "  # coefficient, intercept \n",
         "\n",
-        "  coeff = lr.coef_\n",
-        "  interc = lr.intercept_\n",
+        "  coefficient = lr.coef_\n",
+        "  intercept = lr.intercept_\n",
         "\n",
-        "  model_prediction = namedtuple(\"prediction_info\" [\"training_MAE\", \"testing_MAE\",\n",
+        "  model_prediction = namedtuple(\"prediction_info\", [\"response_variable\",\"training_MAE\", \"testing_MAE\",\n",
         "                                                   \"coefficient\", \"intercept\"])\n",
-        "  return model_prediction(training_MAE, testing_MAE, coefficient, intercept)\n"
+        "  return model_prediction(response_variable[0], training_MAE, testing_MAE, coefficient, intercept)\n"
       ],
-      "execution_count": 72,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -1974,7 +1976,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "0c541707-e456-438d-d870-683f5667d845"
+        "outputId": "7d2e7afc-76ac-499f-81b3-ba0ecb2a2f87"
       },
       "source": [
         "# now lets try to make a prediction \n",
@@ -1982,7 +1984,7 @@
         "X_matrix2 = realestate_rental_df.loc[:, ['bathrooms', \"bedrooms\" ]]\n",
         "X_matrix2"
       ],
-      "execution_count": 66,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2091,7 +2093,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 95
         }
       ]
     },
@@ -2104,13 +2106,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "13952d5d-67ff-4806-dd5c-4444c67f6845"
+        "outputId": "9107ab1d-b3a1-4f33-eb5f-a54153e6b357"
       },
       "source": [
         "y_target2 = realestate_rental_df[\"price\"].to_frame()\n",
         "y_target2.head()"
       ],
-      "execution_count": 70,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2174,7 +2176,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 70
+          "execution_count": 96
         }
       ]
     },
@@ -2183,28 +2185,45 @@
       "metadata": {
         "id": "9N5q7igsOWt8",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 266
-        },
-        "outputId": "101857ac-a88b-425d-f5b2-5f2d99fab48a"
+        "colab": {}
       },
       "source": [
-        "test_object = linear_regress_predict(X_matrix2,y_target2)"
+        "prediction = linear_regress_predict(X_matrix2,y_target2,[1,1] )"
       ],
-      "execution_count": 73,
+      "execution_count": 109,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cCPE0ooZigH0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "9e511010-03cd-4bf2-f40a-608d2ddbb5c8"
+      },
+      "source": [
+        "print(f\"Prediction: {prediction.response_variable}\")\n",
+        "\n",
+        "print(f\"Coefficient: {prediction.coefficient}\")\n",
+        "print(f\"Intercept: {prediction.intercept}\")\n",
+        "print(f\"Training MAE: {prediction.training_MAE}\")\n",
+        "print(f\"Testing MAE: {prediction.testing_MAE}\")"
+      ],
+      "execution_count": 110,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-73-cc120e28efeb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_object\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinear_regress_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_matrix2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_target2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-72-6232580418a2>\u001b[0m in \u001b[0;36mlinear_regress_predict\u001b[0;34m(X_matrix, y_target)\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m   model_prediction = namedtuple(\"prediction_info\" [\"training_MAE\", \"testing_MAE\",\n\u001b[0;32m---> 31\u001b[0;31m                                                    \"coefficient\", \"intercept\"])\n\u001b[0m\u001b[1;32m     32\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mmodel_prediction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_MAE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtesting_MAE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoefficient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mintercept\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Prediction: [2943.13866969]\n",
+            "Coefficient: [[2112.1158617   384.46668783]]\n",
+            "Intercept: [446.55612016]\n",
+            "Training MAE: 820.7052924091685\n",
+            "Testing MAE: 825.4385472797375\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
