--- a/module2-regression-2/josiah_mckiney_LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/josiah_mckiney_LS_DS_212_assignment.ipynb
@@ -539,6 +539,7 @@
         "colab": {}
       },
       "source": [
+        "#making created the index\n",
         "df2 = df.set_index('created')"
       ],
       "execution_count": 7,
@@ -552,6 +553,7 @@
         "colab": {}
       },
       "source": [
+        "#creating my feature matrix\n",
         "X = df2[['bathrooms', 'bedrooms']]"
       ],
       "execution_count": 29,
@@ -565,6 +567,7 @@
         "colab": {}
       },
       "source": [
+        "#making my target\n",
         "y = df2['price']"
       ],
       "execution_count": 30,
@@ -578,6 +581,7 @@
         "colab": {}
       },
       "source": [
+        "#making my traing set and validation set\n",
         "cutoff = '2016-06-01'\n",
         "mask = df2.index < cutoff\n",
         "\n",
@@ -672,6 +676,7 @@
         "outputId": "7c59438a-5b5e-4771-d25d-ede7cf9b64b3"
       },
       "source": [
+        "#training my model\n",
         "model = LinearRegression()\n",
         "\n",
         "model.fit(X_train, y_train)"
@@ -764,9 +769,11 @@
         "outputId": "28ae6f58-1009-479e-c4c8-185d9f828431"
       },
       "source": [
+        "#using my training set to make my predictions \n",
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
         "y_predict = model.predict(X_train)\n",
         "\n",
+        "#finding the mean abolute error\n",
         "model_mae = mean_absolute_error(y_train, y_predict)\n",
         "model_mae"
       ],
@@ -798,6 +805,7 @@
         "outputId": "45d55f9d-f67c-4215-aec7-467bd4ed2016"
       },
       "source": [
+        "#finding the mean squared error\n",
         "model_rmse = mean_squared_error(y_train, y_predict, squared=False)\n",
         "model_rmse"
       ],
@@ -829,6 +837,7 @@
         "outputId": "11440567-3cc2-4ac3-85d7-5f428b088738"
       },
       "source": [
+        "#findning the r2 score\n",
         "model_r2 = r2_score(y_train, y_predict)\n",
         "model_r2"
       ],
@@ -860,8 +869,10 @@
         "outputId": "25d1f86f-c570-49da-8b99-a90b82aa9e9d"
       },
       "source": [
+        "#creating my validation predictions \n",
         "y_predict_test = model.predict(X_val)\n",
         "\n",
+        "#finding the mean absolute error for the validations \n",
         "model_mae_test = mean_absolute_error(y_val, y_predict_test)\n",
         "model_mae_test"
       ],
@@ -893,6 +904,7 @@
         "outputId": "fc1824b9-bbd0-4165-ae81-b3e97812d880"
       },
       "source": [
+        "#finding the mean squared error for the validations.\n",
         "model_rmse_test = mean_squared_error(y_val, y_predict_test, squared=False)\n",
         "model_rmse_test"
       ],
@@ -924,6 +936,7 @@
         "outputId": "45552b17-1899-4c7a-fdc0-048d1745cdc6"
       },
       "source": [
+        "#finding the r2 score for my validations.\n",
         "model_r2_test = r2_score(y_val, y_predict_test)\n",
         "model_r2_test"
       ],
